--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.4.4"
+matplotlib = "^3.5.3"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
