--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 pandas = "^1.4.4"
 matplotlib = "^3.5.3"
 jupyter = "^1.0.0"
+seaborn = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 
