--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ pandas = "^1.4.4"
 matplotlib = "^3.5.3"
 jupyter = "^1.0.0"
 seaborn = "^0.12.0"
+plotly = "^5.10.0"
+chart-studio = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
